@@ -4,6 +4,10 @@
 	* lisp/sawfish/wm/state/wm-spec.jl
 	* lisp/sawfish/wm/state/transient.jl: Suppert _NET_WM_USER_TIME [Helmut Eller]
 
+	* sawfish/lisp/sawfish/ui/layouts/keymaps.jl
+	* sawfish/lisp/sawfish/ui/layout.jl
+	* lisp/sawfish/ui/widgets/frame-style.jl: Added ATK-A11Y Support [Shobbit Marthur]
+
 2008-11-20  Christopher Bratusek <nano-master@gmx.de>
 	* lisp/sawfish/wm/autoload.jl: load all keybindings
 
